# plot2D

./: .gitignore  CMakeLists.txt  README.md  build.sh  plot2D
.github/workflows/: build-release.yml
cmake/: mingw-toolchain.cmake
src/: main.c  main.h
